--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "util": "^0.12.3",
     "validator": "^13.1.17",
