--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@inovua/reactdatagrid-enterprise": "^4.0.12",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "mapbox-gl": "^1.13.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
@@ -18,6 +20,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
+    "react-mapbox-gl-geocoder": "^1.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
