--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "mapbox-gl": "^1.13.0",
+    "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-overlay": "^2.0.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
-    "react-mapbox-gl-geocoder": "^1.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -29,6 +30,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "three": "^0.126.1",
+    "threebox": "^0.1.5",
     "util": "^0.12.3",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
